# cloud_ol

./: .env  .gitignore  Cargo.toml  README.md  cfg  database.sql  docker-compose.yml
src/: cfg.rs  claims.rs  database.rs  endpoint.rs  main.rs
src/endpoints/: get_photo.rs  load_photo.rs  login.rs  logout.rs  mod.rs  names_private_albums.rs  paths_public_photo.rs  registration.rs
src/handlers/: response.rs
src/middleware/: jwt.rs
src/models/: login.rs  mod.rs  registration.rs
