[package]
name = "cloud_ol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web-grants = "4.0.3"
actix-web-httpauth = "0.8.1"
actix-web = { version = "4.5.1", default-features = false, features = ["cookies"] }
actix-cors = "0.7.0"
jsonwebtoken = "9.2.0"
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.33", features = ["serde"] }
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
serde_json = "1.0.114"
rand_core = { version = "0.6.4", features = ["std"] }
env_logger = "0.11.2"
dotenv = "0.15.0"
argon2 = { version = "0.5.3", features = ["password-hash", "default"] }
uuid = { version = "1.7.0", features = ["serde"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.9"
tracing-subscriber = "0.3.18"
tokio = "1.36.0"
http = "1.1.0"
shuttle-actix-web = "0.41.0"
shuttle-runtime = "0.41.0"
shuttle-shared-db = { version = "0.41.0", features = ["postgres", "sqlx"] }
